--- a/build.gradle
+++ b/build.gradle
@@ -244,7 +244,8 @@ def versions = [
         gradlePitest        : '1.6.0',
         pitest              : '1.6.3',
         sonarPitest         : '0.5',
-        serviceAuthVersion  : '4.0.0'
+        serviceAuthVersion  : '4.0.0',
+        springFramework     : '5.3.7'
 ]
 
 configurations.all {
@@ -283,15 +284,15 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
-    implementation group: 'org.springframework', name:'spring-aop', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-beans', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-context', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-core', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-expression', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-jcl', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-oxm', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-web', version: '5.3.7'
-    implementation group: 'org.springframework', name:'spring-webmvc', version: '5.3.7'
+    implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-expression', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-jcl', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
