--- a/build.gradle
+++ b/build.gradle
@@ -196,9 +196,10 @@ dependencyCheck {
 dependencyManagement {
     dependencies {
         // CVE-2021-21290
-        dependencySet(group: 'io.netty', version: '4.1.59.Final') {
+        dependencySet(group: 'io.netty', version: '4.1.61.Final') {
             entry 'netty-buffer'
             entry 'netty-codec'
+            entry 'netty-codec-dns'
             entry 'netty-codec-http'
             entry 'netty-codec-http2'
             entry 'netty-codec-socks'
@@ -206,6 +207,8 @@ dependencyManagement {
             entry 'netty-handler'
             entry 'netty-handler-proxy'
             entry 'netty-resolver'
+            entry 'netty-resolver-dns'
+            entry 'netty-resolver-dns-native-macos'
             entry 'netty-transport'
             entry 'netty-transport-native-epoll'
             entry 'netty-transport-native-kqueue'
@@ -248,6 +251,8 @@ def versions = [
         springFramework     : '5.3.7'
 ]
 
+ext['spring-framework.version'] = '5.3.7'
+
 configurations.all {
     resolutionStrategy {
         eachDependency { DependencyResolveDetails details ->
@@ -258,13 +263,13 @@ configurations.all {
                 details.useVersion '2.12.10'
             }
             if (details.requested.group in ['org.apache.tomcat.embed']) {
-                details.useVersion '9.0.43'
+                details.useVersion '9.0.50'
             }
             if (details.requested.group in ['org.apache.httpcomponents.httpclient']) {
                 details.useVersion '4.5.13'
             }
             if (details.requested.group in ['org.eclipse.jetty']) {
-                details.useVersion '9.4.38.v20210224'
+                details.useVersion '9.4.43.v20210629'
             }
         }
     }
@@ -319,6 +324,11 @@ dependencies {
     implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion) {
         force = true
     }
+
+    implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty', version: '2.4.4'
+
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
